vehicle/tests/golden/error/scoping/freeBoundShadowing/spec.vcl
f : Bool
f = True

f : Bool
f = True
